infra/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service
  template:
    metadata:
      labels:
        app: service
    spec:
      nodeSelector:
        kubernetes.io/hostname: stone
      containers:
        - name: service
          image: 192.168.0.69:30500/service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: LoadBalancer
  selector:
    app: service
  ports:
    - port: 8000
      targetPort: 8000
